syntax = "proto3";
import "services/ads.proto";

message Error {
  string error_message = 1;
  uint32 error_code = 2;
}

message Response {
  string request_id = 1;

  oneof response {
    Error error = 2;
    services.GetExperiencesResponse get_experiences_response = 3;
    services.GetExperienceResponse get_experience_response = 4;
    services.CreateExperienceResponse create_experience_response = 5;
    services.UpdateExperienceResponse update_experience_response = 6;
    services.DeleteExperienceResponse delete_experience_response = 7;
    services.CreateAvailabilityResponse create_availability_response = 8;
    services.GetAvailabilitiesResponse get_availabilities_response = 9;
    services.UpdateAvailabilityResponse update_availability_response = 10;
    services.DeleteAvailabilityResponse delete_availability_response = 11;
    services.CreateJobOfferRequestResponse create_job_offer_response = 12;
    services.GetJobOffersRecommendationResponse get_job_offers_recommendation_response = 13;
    services.GetJobOfferResponse get_job_offer_response = 14;
  }
}